Finish Resource Packs
Finished integrating resource packs. Keeping all assets from this point on private. The code will compile but will throw a runtime error unless the appropriate key is provided to decrypt the resource pack. Rendering the player's animated decal has been fixed. This commit will resolve #14 and close #13.

--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,8 @@ PixelGame/Release/
 PixelGame/x64/
 PixelGame/.vs/
 PixelGame/Assets/temp/
-#PixelGame/Assets/images/
-#PixelGame/Assets/data/leveldata.json
+PixelGame/Assets/images/
+PixelGame/Assets/data/leveldata.json
 
 # VS2019 Files
 PixelGame/*vcxproj*
